--- a/views/pages/website/index.pug
+++ b/views/pages/website/index.pug
@@ -19,7 +19,7 @@ block content
                 th CREATED
     
     .col-12
-      a.btn.btn-primary.bg-gradient-blue
+      button.btn.btn-primary(onclick="location.href='/mmi-admin-dashboard/add-website'")
         span.fas.fa-globe
         |  New
 
