--- a/views/pages/website/view.pug
+++ b/views/pages/website/view.pug
@@ -3,7 +3,7 @@ extends ../../layout
 block content
     .row
         .col-12
-            .card(data-widget="collapse")
+            .card
                 .card-header
                     h3.card-title=website_name
                     .card-tools
