--- a/views/pages/setting/index.pug
+++ b/views/pages/setting/index.pug
@@ -22,6 +22,8 @@ block content
                                 i.fas.fa-search
                                 |  Search
                 .card-footer#search-result
+                .overlay(style="display:none;")
+                    i(class="fas fa-2x fa-sync-alt fa-spin")
 
 block js
   script(src="/admin-lte-3/javascripts/moment.min.js")
