--- a/views/layout.pug
+++ b/views/layout.pug
@@ -14,7 +14,8 @@ html
 
     link(rel="stylesheet", href="/admin-lte-3/dist/css/adminlte.min.css")
     link(rel="stylesheet", href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" )
-  body.hold-transition.sidebar-mini
+  //- body.hold-transition.sidebar-mini
+  body.sidebar-mini.sidebar-collapse
 
     .wrapper
       nav.main-header.navbar.navbar-expand.navbar-white.navbar-light
