--- a/views/pages/setting/new.pug
+++ b/views/pages/setting/new.pug
@@ -17,6 +17,7 @@ block content
               label(class="col-sm-2 col-form-label", for="website_name") Website Name
               .col-sm-10
                 input#website_name(type="text", name="website_name", class="form-control", placeholder="(Required)", value=title)
+                input#website_icon_url(type="text", name="website_icon_url", class="form-control", placeholder="(Required)", value=fav_icon)
                 //- small
                 //-   i This is required field
             
@@ -82,7 +83,9 @@ block content
             .form-group.row
               label(class="col-sm-2 col-form-label", for="country") Country
               .col-sm-10
-                input#country(type="url", name="country", class="form-control", placeholder="(Optional) default is Philippines", value=alexa_rankings.country)
+                input#country(type="text", name="country", class="form-control", placeholder="(Optional) default is Philippines", value=alexa_rankings.country)
+                input#country_code(type="text", name="country_code", class="form-control", placeholder="(Optional) default is PHL", value=country_code.slice(-1)[0])
+                input#language(type="text", name="language", class="form-control", placeholder="(Optional) default is English", value=language)
             
             .form-group.row
               label(class="col-sm-2 col-form-label", for="website_cost") Website Cost
