--- a/views/pages/website/view.pug
+++ b/views/pages/website/view.pug
@@ -13,3 +13,5 @@ block content
                             i.fas.fa-minus
                 .card-body
                     h5=website_url
+                    p Created by: #{created_by} When: #{date_created}
+                    p Updated by: #{updated_by} When: #{date_updated}
